<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBoxEuropean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/european_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAsian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/asian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEuropean"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEuropean" />

    <CheckBox
        android:id="@+id/checkBoxPanasian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/panasian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAsian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAsian" />

    <CheckBox
        android:id="@+id/checkBoxEastern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/eastern_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPanasian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPanasian" />

    <CheckBox
        android:id="@+id/checkBoxAmerican"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/american_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEastern"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEastern" />

    <CheckBox
        android:id="@+id/checkBoxRussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/russian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmerican"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmerican" />

    <CheckBox
        android:id="@+id/checkBoxMediterranean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mediterranean_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRussian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRussian" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/teal_700"
        android:clickable="true"
        android:text="@string/button_apply_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMediterranean" />
</androidx.constraintlayout.widget.ConstraintLayout>